# S9-DSL-CLIvilization

./: DSL.md  README.md  lang  vscode-CLIvilization-0.0.1.vsix
CLIvilization/: .gitignore  package-lock.json  package.json  test.ts
CLIvilization/adaptator/: main.ts
docs/: metamodel-vs-ast.md  services-notes.md  state-of-the-art.md  variability.md
engine/: .env.dist  .gitignore  Cargo.toml  build.rs  config.json  game.json
engine/src/: ast.rs  logger.rs  main.rs
engine/src/game/: ai.rs  map.rs  mod.rs  state.rs  ui.rs  utils.rs
examples/variant_1/: NOTES.md  game.civ  game.json
examples/variant_2/: NOTES.md  game.civ
examples/variant_3/: NOTES.md  game.civ
examples/variant_4/: NOTES.md  game.civ
examples/variant_5/: NOTES.md  game.civ
model/: draft.json  metamodel.puml
