[package]
name = "clivilization-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.30.0-beta.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
noise = "0.9.0"
rand = "0.10.0-rc.5"
clap = { version = "4.5.53", features = ["derive"] }
openai = "1.1.1"
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
regex = "1.12.2"

[lints.clippy]
pedantic = "warn"